--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "type": "git",
     "url": "git+https://github.com/Kitamreik/pp-step1.git"
   },
+  "engines": {
+    "node": "16.14.2"
+  },
   "author": "Kit Fenrir Amreik (they/she)",
   "license": "ISC",
   "bugs": {
@@ -18,15 +21,21 @@
   },
   "homepage": "https://github.com/Kitamreik/pp-step1#readme",
   "dependencies": {
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.7",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "method-override": "^3.0.0",
-    "mongoose": "^6.3.2",
-    "morgan": "^1.10.0"
+    "mongoose": "^6.3.3",
+    "mongoose-findorcreate": "^3.0.0",
+    "morgan": "^1.10.0",
+    "passport": "^0.5.2",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16",
-    "uuid": "^8.3.2"
+    "nodemon": "^2.0.16"
   }
 }
